Fixing text spacing issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3143,7 +3143,8 @@ input, select, textarea {
 			}
 
 			#sidebar2 h3 {
-  			  margin-bottom: 0.5em;
+  			  margin-top: 1em;
+			  margin-bottom: 0.5em;
 			}
 
 			#sidebar2 .image.featured {
